<resources>
    <string name="app_name">Foodie</string>

    <!-- Sign Up -->
    <string name="sign_up_name_hint">Full Name</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="sign_up_help">Have an Account? Sign in</string>

    <!-- Sign Up -->
    <string name="sign_in_header">Sign in</string>
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_help">Don\'t have an Account? Sign Up</string>
    <string name="userprofile_username">Name</string>
    <string name="userprofile_phone">Contact No :</string>
    <string name="userprofile_email">email :</string>
    <string name="userprofile_button">Update</string>
</resources>